fixed overflow with notes container in calendar html page

--- a/PMDD_Tracker/PMDD_Project/static/basefiles/styles.css
+++ b/PMDD_Tracker/PMDD_Project/static/basefiles/styles.css
@@ -73,8 +73,10 @@ html{
 
 .notescontainer {
   display:flex;
+  width: 700px;
   overflow: auto;
   height: 80%;
+
 }
 
 .notes h1 {
